# Cornernet-Text-Detection

./: CornerNet.py  README.md
Modules/: dataset.py  heatmap_utils.py  hourglass.py  loss.py  pooling_layers.py  utils.py
Modules/_cpools/: CMakeLists.txt  __init__.py
Modules/_cpools/src/: bottom_pool.cpp  left_pool.cpp  top_pool.cpp
